--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -86,7 +86,7 @@ pdfauthor={Jemma Stachelek}
 \vspace{-4em}
 
 \section*{Abstract}	
-Ensuring accurate detection and attribution of abnormal releases of radioactive material is critical for protecting human health and safety. Most commonly, such detection is accomplished via active monitoring approaches involving the collection of physical samples. This is labor intensive and limits the temporal and spatial resolution of any detected events to a relatively coarse level. As an alternative first step towards passive monitoring, we developed an approach using eddy flux tower data records to identify signals from a known abnormal release and quantify the extent to which that signal also occurs at other times in the data record. Through two case-studies, one of which targeted the Fukushima nuclear disaster and the other targeting a radioisotope production facility, we tested our approach and identified several potential heretofore unidentified abnormal releases that were consistent with atmospheric circulation patterns and/or wind direction from known release sites. Because our approach is relatively simple and is resistant to systematic errors in the observational record, it has broad applicability beyond specific constituents and ecosystem types to identify a wide variety of limited-duration anomalies in flux tower data to ensure human health and industrial safety.
+Ensuring accurate detection and attribution of abnormal releases of radioactive material is critical for protecting human health and safety. Most commonly, such detection is accomplished via active monitoring approaches involving the collection of physical samples. This is labor intensive and limits the temporal and spatial resolution of any detected events to a relatively coarse level. As an alternative first step towards passive monitoring, we developed an approach using eddy flux tower data records to identify signals from a known abnormal release and quantify the extent to which that signal also occurs at other times in the data record. Through two case-studies, one of which targeted the Fukushima nuclear disaster and the other targeting an abnormal release event at a radioisotope production facility in Fleurus Belgium, we tested our approach and identified several potential heretofore unidentified abnormal releases that were consistent with atmospheric circulation patterns and/or wind direction from known release sites.Because our approach is relatively simple and is resistant to systematic errors in the observational record, it has broad applicability beyond specific constituents and ecosystem types to identify a wide variety of limited-duration anomalies in flux tower data to ensure human health and industrial safety.
 
 \section{Introduction}
 Detecting abnormal releases of radioactive material (hereafter simply “abnormal releases”) is important as a means of ensuring human health and industrial safety. The detection of such releases is typically accomplished using active approaches that require site-specific sampling or trace gas measurements \citep{loyalkaMechanicsAerosolsNuclear1983} sometimes as a part of international monitoring networks \citep[e.g.,][]{sangiorgiEuropeanRadiologicalData2020}. A potential shortcoming of these active monitoring approaches is that they require collection of physical samples (particulates, gasses, and other signal carriers) to retrospectively determine the nature of the release and the events that may have led up to it. Active monitoring with such means is thus labor intensive and limits the temporal and spatial resolution of any detected events to a relatively coarse level. 
@@ -95,16 +95,16 @@ A potential alternative to active monitoring is passive monitoring \citep[e.g., 
 
 Our utilization of flux tower records for event discrimination stands in contrast to the typical use of data from the towers for direct carbon balance accounting. Whereas carbon balance accounting activities deal directly in the units of the measured data for computing quantities like net ecosystem exchange \citep{baldocchiInterannualVariabilityNet2018}, our use treats each variable as potentially including an indirect signal (i.e. an anomaly from normal vegetation behavior) of radioactive material deposition irrespective of its physical properties (e.g., mass, volume, etc). In this way, we are not directly measuring radioactive deposition but rather leveraging the fact that existing ecosystem monitoring records reflect vegetation photosynthesis rates and general stress condition of site vegetation in a known way \citep{nobelPhysicochemicalEnvironmentalPlant2020}.
 
-We specifically focused on short-term responses of vegetation (on the order of days to weeks) to potential deposition of radioactive material rather than chronic long-term signals (on the order of years to decades). In the first case study, we tested the ability of various data mining techniques to recover the signal from the closest tower (approximately 18 km away) to a known release coming from the Institut des Radioelements (IRE) in Belgium (hereafter called the known release location or the “facility”) nominally occurring on August 23, 2008. The IRE release originated from waste tanks into the atmosphere and lasted for several days totaling 50 GBq 131I \citep{carle2010individual}. For example, grass samples collected in the vicinity of the facility found radioactivity levels of 5000 Bq/kg. In the second case study, we further explored potential signals influx tower data related to the Fukushima Nuclear Disaster nominally occurring on March 11, 2011 releasing a massive radioactive plume that reached North America in 5 days eventually dispersing throughout the entire northern hemisphere \citep{meszarosPredictabilityDispersionFukushimaderived2016}. We used the signal identified during the known release to identify additional potential abnormal releases occurring at other times in the data record and at other nearby eddy flux towers. While little is known about the direct or indirect effects of radioactive material on vegetation, we expect that exposure may cause declines in photosynthetic $CO_2$ uptake. This may be expressed as a change in the slope of the $CO_2$ relationship with other environmental variables (e.g. air temperature, humidity, precipitation, etc.) before, during, and after exposure.
+We specifically focused on short-term responses of vegetation (on the order of days to weeks) to potential deposition of radioactive material rather than chronic long-term signals (on the order of years to decades). In the first case study, we tested the ability of various data mining techniques to recover the signal from the closest tower (approximately 18 km away) to a known release coming from the Institut des Radioelements (IRE) in Belgium (hereafter called the known release location or the “facility”) nominally occurring on August 23, 2008. The IRE release originated from waste tanks into the atmosphere and lasted for several days totaling 50 GBq 131I \citep{carle2010individual}. For example, grass samples collected in the vicinity of the facility found radioactivity levels of 5000 Bq/kg. In the second case study, we further explored potential signals influx tower data related to the Fukushima Nuclear Disaster nominally occurring on March 11, 2011 releasing a massive radioactive plume that reached North America in 5 days that eventually dispersed throughout the entire northern hemisphere \citep{meszarosPredictabilityDispersionFukushimaderived2016}. We used the signal identified during the known release to identify additional potential abnormal releases occurring at other times in the data record and at other nearby eddy flux towers. While the body of literature on direct or indirect effects of radioactive material on vegetation is limited, we expect that exposure may cause declines in photosynthetic $CO_2$ uptake. This may be expressed as a change in the slope of the $CO_2$ relationship with other environmental variables (e.g. air temperature, humidity, precipitation, etc.) before, during, and after exposure.
 
 
 \section{Methods}
 
 \subsection{Data Description}
 
-For the IRE case study, we gathered measurements from eddy covariance platforms (i.e., “flux towers”) located in Belgium, which are part of the ICOS (Integrated Carbon Observation System) network available through the European Fluxes Database (http://www.europe-fluxdata.eu/). Only three sites in proximity to the known release location had sufficient long-term data for our anticipated data mining efforts (BE-Lon, BE-Bra, and BE-Vie sites, Figure 1). Each of the three flux tower sites are located within a crop ecosystem type and had almost 10 years of data available from 2004 through 2013 recorded at 30 min intervals. While BE-Lon had a near-continuous data record during this period, BE-Bra had a long period of missing data in 2005, and both BE-Bra and BE-Vie had a long period of missing data in 2009. The distance between IRE and the flux tower sites are approximately 19 km, 95 km, and 105 km for the BE-Lon, BE-Bra, and BE-Vie respectively.
+For the IRE case study, we gathered measurements from eddy covariance platforms (i.e., “flux towers”) located in Belgium, which are part of the ICOS (Integrated Carbon Observation System) network available through the European Fluxes Database (http://www.europe-fluxdata.eu/). Three sites in proximity to the known release location had sufficient long-term data for our anticipated data mining efforts (BE-Lon, BE-Bra, and BE-Vie sites, Figure 1). Each of the three flux tower sites are located within a crop ecosystem type and had almost 10 years of data available from 2004 through 2013 recorded at 30 min intervals. While BE-Lon had a near-continuous data record during this period, BE-Bra had a long period of missing data in 2005, and both BE-Bra and BE-Vie had a long period of missing data in 2009. The distance between IRE and the flux tower sites are approximately 19 km, 95 km, and 105 km for the BE-Lon, BE-Bra, and BE-Vie respectively.
 
-For the Fukushima case study, we gathered measurements from flux towers located in the Northern Hemisphere (Western United States), which are part of the Ameriflux network (https://ameriflux.lbl.gov/). For contrast to the Northern Hemisphere sites where we expect a higher likelihood of impact, we also gathered measurements from flux towers located in the Southern Hemisphere, which are part of the OzFlux network \citep{cleverly2011alice}. We selected sites with sufficient long-term data to cover the 2011 date of the disaster and excluded boreal sites with extreme snow cover related seasonality. We ultimately selected three sites (US-Wrc, US-GLE, and OZ-Mul, Figure 1B).
+For the Fukushima case study, due to the direction of the plume, we gathered measurements from flux towers located in the Northern Hemisphere (Western United States), which are part of the Ameriflux network (https://ameriflux.lbl.gov/). For contrast to the Northern Hemisphere sites where we expect a higher likelihood of impact, we also gathered measurements from flux towers located in the Southern Hemisphere, which are part of the OzFlux network \citep{cleverly2011alice}. We selected sites with sufficient long-term data to cover the 2011 date of the disaster and excluded boreal sites with extreme snow cover related seasonality. We ultimately selected three sites (US-Wrc, US-GLE, and OZ-Mul, Figure 1B).
 
 \subsection{Modeling Approach}
 We processed each data file by 1) excluding nighttime measurements based on photosynthetic photon flux density (PPFD > 100 µmol m-2 s-1) or net solar radiation (netrad > 0 W/m2) and 2) defining an “event period” following the publicly released date of the abnormal release. We focused on the following variables as potentially containing a signature of the release : carbon dioxide, carbon dioxide flux (fc), latent heat (le), and sensible heat flux (h). Conversely, the following were treated as independent explanatory variables: wind speed, precipitation, atmospheric pressure, relative humidity, photosynthetic photon flux density, air temperature, and net radiation. Additionally, we used wind direction data from the eddy flux towers to determine when or if any released material might plausibly reach a particular location. Each of these variables were recorded by the flux tower instrumentation at a 30 minute (min) interval barring any gaps due to missing data.
@@ -113,7 +113,7 @@ To begin our analysis, we screened all pairwise, linear relationships between th
 
 \[ Y = \beta_0 + \beta_1X_1 + \beta_2W_2 + \beta_3X_1W_2 \]
 
-This interaction model is fit for a window of time encompassing the known release event and for every other possible window in the period-of-record. The overall length of the window was treated as an adjustable hyperparameter since the length of time for an abnormal material release to reach the footprint of the flux tower may be event-dependent and/or unknown. In addition, the length of time for deposited material to induce a possible vegetation response (or at least a flux tower anomaly) is an unknown quantity. Thus, in the default base case, we set the window length (n\_days) as 7 days, but we ran hyperparameter experiments to determine the result of setting it to longer periods of 10 and 14 days. The window length affects the duration of time designated as before and after the event. The period of time designated as during the event was set as 2 days in all cases. We compared the effect size of the interaction term ($\beta$3) during the event-encompassing window against all other windows in a “rolling” analysis. Therefore, the overall analysis compares the interaction term of the window of the known event (which occurred on August 23, 2008) against a window centered on every other observation. Specific windows that had an effect size at least as large as that of the known event and with wind conditions defined as “towards” the flux tower were flagged as “event detections”. The frequency of these event detections are reported as “event detections”. 
+This interaction model is fit for a window of time encompassing the known release event and for every other possible window in the period-of-record. The overall length of the window was treated as an adjustable hyperparameter since the length of time for an abnormal material release to reach the footprint of the flux tower may be event-dependent and/or unknown. In addition, the length of time for deposited material to induce a possible vegetation response (or at least a flux tower anomaly) is an unknown quantity. Thus, in the default base case, we set the window length (n\_days) as 7 days, but we ran hyperparameter experiments to determine the result of setting it to longer periods of 10 and 14 days. The window length affects the duration of time designated as before and after the event. The period of time designated as during the event was set as 2 days in all cases. We compared the effect size of the interaction term ($\beta$3) during the event-encompassing window against all other windows in a “rolling” analysis. Therefore, the overall analysis compares the interaction term of the window of the known event against a window centered on every other observation. Specific windows that had an effect size at least as large as that of the known event and with wind conditions defined as “towards” the flux tower were flagged as “event detections”.
 
 In order to flag event detections, we defined several adjustable hyperparameters to deal with uncertainty surrounding atmospheric transport and the timing of any possible responses to material deposition. The first hyperparameter we defined, wind\_tolerance, reflects the range around the bearing from the facility to the tower location which counts as towards the tower. In the base default case, we set wind\_tolerance to 10 degrees, but we explored setting it to smaller values down to 5 degrees and larger values up to 20 degrees. The second hyperparameter we defined, event\_quantile\_effect, handles the unknown travel time of any materials to be deposited via an abnormal release or what, if any, delays exist between deposition and vegetation response. Rather than simply selecting the maximum value of $\beta$3 during a given window or the value at the exact time of the event, the value of event\_quantile\_effect is set to correspond with a specific quantile of all $\beta$3 values during the event window. In the base default case, this was set at 0.9, but we explored values as low as 0.5. All statistical analyses were carried out using the statsmodels Python package (Seabold and Perktold, 2009). Our processing scripts are openly available at [doi link], and we refer readers to the original providers for data access.
 
@@ -126,7 +126,7 @@ In order to flag event detections, we defined several adjustable hyperparameters
 
 \section{Results}
 
-For the IRE case study, among all possible pairwise combinations of dependent and independent variables (n=51, Table S1), we found that only the $CO_2$ versus air temperature comparison had any measure of predictability from the model ($R^2$ > 0.05), strong event effect size, and wind direction coming from the release location to towers in ICOS (Table 1). Although other variable pairs such as sensible heat flux and net radiation had a stronger effect size for the BE-Lon site, they had a weak linear relationship across the other sites. When we focus on the period of the abnormal release event in particular rather than the overall period of record, we found that $CO_2$ versus air temperature relationship at each of the three focal towers had similar $R^2$ values and effect sizes (Table 1). Figure 2 provides a visual example of the effect size framing in our analysis. Note how the apparent interaction effect between time periods around the abnormal release event in Figure 2A (before, during, after) translates to a relatively high effect size (Figure 2C) whereas in Figure 2B at an arbitrary time point, there is no apparent interaction effect. This corresponds to a low effect size in Figure 2D. 
+For the IRE case study, among all possible pairwise combinations of dependent and independent variables (n=51, Table S1), we found that only the $CO_2$ versus air temperature comparison had any measure of predictability from the model ($R^2$ > 0.05) and a strong event effect size (Table 1). Although other variable pairs such as sensible heat flux and net radiation had a stronger effect size for the BE-Lon site, they had a weak linear relationship across the other sites. When we focus on the period of the abnormal release event in particular rather than the overall period of record, we found that $CO_2$ versus air temperature relationship at each of the three focal towers had similar $R^2$ values and effect sizes (Table 1). Figure 2 provides a visual example of the effect size framing in our analysis. Note how the apparent interaction effect between time periods around the abnormal release event in Figure 2A (before, during, after) translates to a relatively high effect size (Figure 2C) whereas in Figure 2B at an arbitrary time point, there is no apparent interaction effect. This corresponds to a low effect size in Figure 2D. 
 
 Despite the similar effect size at the three tower sites during the abnormal release event, they differed substantially in the degree to which they uniquely flagged the known release event. At the BE-Lon and BE-Vie sites, our event detection algorithm identified the known release and only a few other time periods as potential abnormal releases (Figure 3). Conversely, at the northerly BE-Bra site, the algorithm was not able to identify the known release event distinct from background noise. This can be seen in the rate of event detections ($\alpha$) at each site, whereby it was less than 1\% at the BE-Lon and BE-Vie sites, but was greater than 2\% at the BE-Bra site. It is notable that this ability to uniquely detect the known release along with a plausible number of additional event detections corresponds with the fraction of the abnormal release period when the wind was pointed from the release location towards the respective tower (using the default base case wind tolerance of 10 deg) which was much lower at the BE-Bra site (5\%) compared to the BE-Lon and BE-Vie sites (34\% Table 1). 
 
@@ -181,7 +181,7 @@ Using flux tower records collected closest to the IRE release location, our even
 
 More generally, we show that flux tower records have value for this type of data mining despite the apparent noisiness of the data \citep{fratiniEddyCovarianceFlux2018}. We attribute the sensitivity of our approach to the fact that we fit successive interaction models to limited sections of the data record, and we leveraged bivariate relationships to constrain noisiness in individual data records. Our approach was aided by the fact that this type of scale-free data mining is largely unaffected by systematic errors due to uncertainty in calibration standards and/or low resolution in specific sensor packages deployed on the towers. This is because although such systematic errors may bias the magnitude of overall flux values, which would be a problem for typical uses of flux towers that deal directly in the units of the measured data, they do not reduce the overall confidence in individual values \citep{langfordEddycovarianceDataLow2015}, which for our purposes might represent an abnormal release signal. The ability of our approach to identify a suitable release signature does likely depend on the quality and completeness of the underlying data.
 
-Another contributor to the success of our approach was the fact that Belgium has a relatively dense network of flux towers with long data records. As a result, we were able to compare event detections at the closest tower against more distant towers (refer to Figure 1), increasing our confidence that we were seeing a true signal and not spurious noise. This level of flux tower density may be found in the United States, Western/Central Europe, Japan, and Australia, which have high densities of flux towers, but not throughout the rest of the world \citep{baldocchi2001fluxnet,pastorello2020fluxnet2015}. As a result, this may impose geographical limits on our approach. Another attribute that likely aided our investigations was the fact that all three of the flux towers we examined were located in similar agricultural ecosystem types. Although investigating whether or not flux tower combinations with differing ecosystems would yield similar results is beyond the scope of the present study, we suspect that the data records among towers in disparate ecosystem types would differ too drastically to be of comparative use. For example, \citet{pastorello2020fluxnet2015} show that towers in the crop ecosystem type, of which all three sites used in this study belong, have a relatively narrow distribution of fluxes (i.e., gross primary production, GPP) compared to towers in the grassland or evergreen broadleaf forest types. One reason for this narrow spread in crop ecosystems may be the relative homogeneity of flux tower footprints in crop ecosystems, which typically extend to within 1000m of the tower depending on atmospheric conditions \citep[e.g., wind speed and direction,][]{chuRepresentativenessEddyCovarianceFlux2021}. Given that towers in other ecosystem types with a more heterogeneous flux tower footprint have a wider distribution of fluxes \citep[e.g.][]{pastorello2020fluxnet2015}, we suspect that having all the towers in our study located in a homogenous ecosystem type was helpful in reducing the spikiness and spread of the data. 
+Another contributor to the success of our approach was the fact that Belgium has a relatively dense network of flux towers with long data records. As a result, we were able to compare event detections at the closest tower against more distant towers (refer to Figure 1), increasing our confidence that we were seeing a true signal and not spurious noise. This level of flux tower density may be found in the United States, Western/Central Europe, Japan, and Australia, which have high densities of flux towers, but not throughout the rest of the world \citep{baldocchi2001fluxnet,pastorello2020fluxnet2015}. As a result, this may impose geographical limits on our approach. Another attribute that likely aided our investigations was the fact that all three of the flux towers we examined were located in similar agricultural ecosystem types. Although investigating whether or not flux tower combinations with differing ecosystems would yield similar results is beyond the scope of the present study, we suspect that the data records among towers in disparate ecosystem types could differ too drastically to be of comparative use. For example, \citet{pastorello2020fluxnet2015} show that towers in the crop ecosystem type, of which all three sites used in this study belong, have a relatively narrow distribution of fluxes (i.e., gross primary production, GPP) compared to towers in the grassland or evergreen broadleaf forest types. One reason for this narrow spread in crop ecosystems may be the relative homogeneity of flux tower footprints in crop ecosystems, which typically extend to within 1000m of the tower depending on atmospheric conditions \citep[e.g., wind speed and direction,][]{chuRepresentativenessEddyCovarianceFlux2021}. Given that towers in other ecosystem types with a more heterogeneous flux tower footprint have a wider distribution of fluxes \citep[e.g.][]{pastorello2020fluxnet2015}, we suspect that having all the towers in our study located in a homogenous ecosystem type was helpful in reducing the spikiness and spread of the data. 
 
 The biggest improvements to our approach would likely come from coupling our data mining procedure with rigorous air pollutant dispersion modeling \cite[e.g.,][]{meszarosPredictabilityDispersionFukushimaderived2016}. This would eliminate the need for indirect estimation of material transport via uncertainty analyses and instead use simulation results to analytically determine the likely arrival and duration of material deposition. Further improvements could be made by incorporating knowledge about the composition of materials being deposited \citep{international2006iaea, meszarosPredictabilityDispersionFukushimaderived2016} and/or the interactions between material exposure and other environmental stressors \citep{mousseauPlantsLightIonizing2020}, which likely affects the severity and timing of ecosystem responses and by extension the fluxes being measured by a given tower. Such information may help disentangle potential interference of atmospheric contaminants with infrared measurement of $CO_2$ from declines in photosynthetic $CO_2$ uptake of contaminated vegetation given our observation that during and after the known abnormal release, the slopes of the relationships between $CO_2$ and air temperature become less negative than before the event, with lower than expected $CO_2$ at low air temperature. The identity of possible atmospheric contaminants is unknown. We can say, however, that iodine itself is unlikely to interfere with measurements of $CO_2$ given that the absorption spectra of iodine peaks at much shorter wavelengths around 10-7 m \citep{haynes2016crc} compared to that of $CO_2$ which peaks around 1700-2100 10-9 m (LICOR Biosciences Inc., Lincoln, NE).
 
