stash text edits

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -91,7 +91,7 @@ Ensuring accurate detection and attribution of abnormal releases of radioactive 
 \section{Introduction}
 Detecting abnormal releases of radioactive material (hereafter simply “abnormal releases”) is important as a means of ensuring human health and industrial safety. The detection of such releases is typically accomplished using active approaches that require site-specific sampling or trace gas measurements \citep{loyalkaMechanicsAerosolsNuclear1983} sometimes as a part of international monitoring networks \citep[e.g.,][]{sangiorgiEuropeanRadiologicalData2020}. A potential shortcoming of these active monitoring approaches is that they require collection of physical samples (particulates, gasses, and other signal carriers) to retrospectively determine the nature of the release and the events that may have led up to it. Active monitoring with such means is thus labor intensive and limits the temporal and spatial resolution of any detected events to a relatively coarse level. 
 
-A potential alternative to active monitoring is passive monitoring \citep[e.g., the German Integrated Measuring and Information system and the International Monitoring System,][]{bieringerMonitoringGroundlevelAir2004}. Although existing wide area monitoring systems are already critical components of abnormal release detection and tracking programs \citep{mediciIMSRadionuclideNetwork2001}, diversification-of-approach may increase the programs' sensitivity and comprehensiveness. With a greater diversity of methods, monitoring programs may be able to detect a wider array of constituents with differing characteristics. In the present study, we developed a novel passive monitoring approach to supplement existing programs that involves the use of eddy covariance data to capture a signal from known abnormal releases. This signal is then used to investigate whether additional potential abnormal releases exist at other times in the data record. We focused on eddy flux towers, as they are a potential source of abnormal release signatures, are globally distributed, have been in near continuous operation for several decades, and can be relatively cheaply and easily deployed in locations of interest. Therefore, they constitute a rich target for data mining approaches aimed at identifying signatures resulting from direct interference of radioactive material with target measurements and/or the indirect signal of vegetation responses to the deposition of radioactive material.
+A potential alternative to active monitoring is passive monitoring \citep[e.g., the German Integrated Measuring and Information system and the International Monitoring System,][]{bieringerMonitoringGroundlevelAir2004}. Although existing wide area monitoring systems are already critical components of abnormal release detection and tracking programs \citep{mediciIMSRadionuclideNetwork2001}, diversification-of-approach may increase the programs' sensitivity and comprehensiveness. With a greater diversity of methods, monitoring programs may be able to detect a wider array of constituents with differing characteristics. In the present study, we developed a novel passive monitoring approach to supplement existing programs that involves the use of eddy covariance data to capture a signal from known abnormal releases. This signal is then used to investigate whether additional potential abnormal releases exist at other times in the data record. We focused on eddy flux towers, as they have to potential to provide abnormal release signatures, are globally distributed, have been in near continuous operation for several decades, and can be relatively cheaply and easily deployed in locations of interest. Therefore, they constitute a rich target for data mining approaches aimed at identifying signatures resulting from direct interference of radioactive material with target measurements and/or the indirect signal of vegetation responses to the deposition of radioactive material.
 
 Our utilization of flux tower records for event discrimination stands in contrast to the typical use of data from the towers for direct carbon balance accounting. Whereas carbon balance accounting activities deal directly in the units of the measured data for computing quantities like net ecosystem exchange \citep{baldocchiInterannualVariabilityNet2018}, our use treats each variable as potentially including an indirect signal (i.e. an anomaly from normal vegetation behavior) of radioactive material deposition irrespective of its physical properties (e.g., mass, volume, etc). In this way, we are not directly measuring radioactive deposition but rather leveraging the fact that existing ecosystem monitoring records reflect vegetation photosynthesis rates and general stress condition of site vegetation in a known way \citep{nobelPhysicochemicalEnvironmentalPlant2020}.
 
